tests/fixtures/invalid/pow_bool_float_bytes.py
# Cannot call pow() with Bool, Float, Bytes
x = pow(True, 1.0, b"hello")
